triangle and polygon implements intesection check